Bug 31355 - Fix weird centering code
Summary: Fix weird centering code
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: tui (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: 15.1
Assignee: Tom Tromey
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-08 19:19 UTC by Tom Tromey
Modified: 2024-03-02 01:46 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Tromey 2024-02-08 19:19:26 UTC
Andrew Burgess pointed out that there is some weird
string-centering code in the TUI:

https://sourceware.org/pipermail/gdb-patches/2024-February/206449.html

These spots should be found & fixed.
Comment 1 Tom Tromey 2024-02-09 14:56:08 UTC
I have a patch.
Comment 2 Sourceware Commits 2024-03-02 01:45:09 UTC
The master branch has been updated by Tom Tromey <tromey@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=a6a3b67fa9052bba81ed91a38569c11ecb95baf1

commit a6a3b67fa9052bba81ed91a38569c11ecb95baf1
Author: Tom Tromey <tom@tromey.com>
Date:   Fri Feb 9 16:22:53 2024 -0700

    Fix TUI text centering
    
    In a couple of spots, the TUI tries to center some text in the window.
    Andrew noticed that the calculation is done strangely and the text
    ends up somewhat to the left of center.
    
    This patch fixes the problem.
    
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=31355
Comment 3 Tom Tromey 2024-03-02 01:46:12 UTC
Fixed.