gdb/tui/tui-regs.c
@@ -354,17 +354,7 @@ tui_data_window::first_data_item_displayed ()
 void
 tui_data_window::erase_data_content ()
 {
-  werase (handle.get ());
-  check_and_display_highlight_if_needed ();
-
-  const char *prompt = _("[ Register Values Unavailable ]");
-  int half_width = (width - box_size ()) / 2;
-  int x_pos;
-  if (strlen (prompt) >= half_width)
-    x_pos = 1;
-  else
-    x_pos = half_width - strlen (prompt);
-  display_string (height / 2, x_pos, prompt);
+  center_string (_("[ Register Values Unavailable ]"));
 }
 
 /* See tui-regs.h.  */
